Amélioration des possibilités

--- a/alertes.yaml
+++ b/alertes.yaml
@@ -7,6 +7,8 @@
   :duration: 90
   :deadline:
   :headline: '7:00:00'
+  :folder: "/Users/philippeperret/__Current_Work__/LDQ-v2"
+  :open_with: "code"
 - :content: Sport
   :duration: 60
   :deadline:
