--- a/alertes.yaml
+++ b/alertes.yaml
@@ -7,8 +7,8 @@
   :duration: 90
   :deadline:
   :headline: '7:00:00'
-  :folder: "/Users/philippeperret/__Current_Work__/LDQ-v2"
-  :open_with: "code"
+  :folder:    "/Users/philippeperret/Programmes/Phoenix/LdQ/ldq-v2"
+  :open_with: "VSCode"
 - :content: Sport
   :duration: 60
   :deadline:
