Correction du bug

--- a/alertes.yaml
+++ b/alertes.yaml
@@ -1,5 +1,5 @@
 ---
-- :content: Travailler sur les tests du site de Lecture de Qualité.
+- :content: Travailler sur le site de Lecture de Qualité.
   :duration: 90
   :deadline:
   :headline: '8:00:00'
